# sort-ios-images

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  main.rs
