[package]
name = "sort-ios-images"
version = "0.6.0"
authors = ["Denis Brodbeck <go.github@darker.red>"]
repository = "https://github.com/denisbrodbeck/sort-ios-images"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
kamadak-exif = "0.5"
structopt = { version = "0.3", default-features = false }
walkdir = "2"
